Latest changes might exist on the GitHub repository.
Please check: https://github.com/INTER-Mediator/INTER-Mediator
Also the Migration Guide (Japanese) might be informative:
  https://inter-mediator.info/ja/for-developers/migration.html

Ver.8 (in development)
- The password hash for authentication moves to SHA-256 based hash, and it has the interoperability with SHA-1 hash.
- The $migrateSHA1to2 variable can moved to SHA-256 hash from SHA-1 hash without changing the password.
- Check the DB schema for authentication in case of debug mode. It checks character length of fields.
- SAML is integrated with SimpleSAMLphp. The $isSAML variable in params.php has to be set true, also set $samlAuthSource,
  and setting information exists in sample/saml-config directory.
- If the variable $samlWithBuiltInAuth in params.php set true, the built-in authentication works first and moves to SAML.
- Custom url for after clicking logout button of the page navigation can set to INTERMediatorOnPage.logoutURL.
- Support handling Claris FileMaker's checkbox set feature on Post Only mode when using DB_FileMaker_DataAPI class or DB_FileMaker_FX class (Thanks to Mr. Masakatsu Inamoto).
- Update sample schema files and recipe.rb for the INTER-Mediator-Server virtual machine and CI.
- Credential info don't store in global variables. These are stored in just only cookie or session storage.
- jQuery-FileUpload plug-in can upload multiple files. Set IMParts_Catalog.jquery_fileupload.multiFileInPostOnly to true.
  This feature can activate on the post only mode. The sample is Sample_webpage/fileuploadMulti_MySQL.html.
- [BUG FIX] Fix compatibility with Claris FileMaker Server. The affected version is Ver.7.
- [BUG FIX] IMLibPageNavigation.moveDetailOnceAgain() didn't work fine.
- [BUG FIX] On the navi-control key, confirm-delete works but delete-confirm didn't (also insert).